# core

./: .coverage  README.md  coverage.xml  posts_output.json  pyproject.toml
docs/: README.md  api.md  architecture.md  development.md  examples.md  execution-and-logs.md  overview.md  planner.md  refactoring_dags_style.md
logs/: runs.sqlite
logs/api_to_json_20260220_125031/: dag.html  dag.yaml
logs/api_to_json_20260220_125355/: dag.html  dag.yaml
logs/api_to_json_20260220_125730/: dag.html  dag.yaml
logs/api_to_json_20260220_141607/: dag.html  dag.yaml
logs/disabled_edge_example_20260220_185950/: dag.html  dag.yaml
logs/disabled_edge_example_20260220_190312/: dag.html  dag.yaml
logs/disabled_edge_example_20260220_190354/: dag.html  dag.yaml
logs/row_stream_live_progress_example_20260221_014307/: run.duckdb
logs/row_stream_live_progress_example_20260221_014425/: run.duckdb
logs/test_metadata_to_duckdb_20260220_200007/: dag.html  dag.yaml  metadata.duckdb  run.duckdb
src/ninout/: __init__.py
src/ninout/core/: __init__.py
src/ninout/core/api/: __init__.py  main.py  repository.py  schemas.py
src/ninout/core/api/routes/: runs.py
src/ninout/core/engine/: __init__.py  dag.py  executor.py  models.py  planner.py  validate.py
src/ninout/core/tests/: conftest.py
src/ninout/core/ui/: __init__.py  layout.py  persist_duckdb.py  persist_sqlite.py  render.py  serialize.py
transformations/: api_to_json.py  disabled_edge_example.py  example_dag.py  hybrid_modes_example.py  row_stream_live_progress_example.py  test_metadata_to_duckdb.py
(+17 files in other folders)
